fixed bug where youtube embed was not responsive

--- a/themes/planes/static/css/style.css
+++ b/themes/planes/static/css/style.css
@@ -363,4 +363,6 @@ td, th{
 .youtube-embed{
   display: block;
   margin: auto;
+  max-width: 560px;
+  width: 100%;
 }
